--- a/java/.classpath
+++ b/java/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.0.jar"/>
-	<classpathentry kind="lib" path="lib/mina-core-2.0.0-M3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mina-core-2.0.0-M3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
